-------------------------------
FlexCat Open Source - Changelog
-------------------------------

$Id$
$URL$

2007-01-21  Jens Langner <Jens.Langner@light-speed.de>

    * scanct.c: fixed bug #752031 where a NULL pointer exception caused
      a crash when the COPYMSGNEW option was used under certain circumstances.

2007-01-07  David Rey <tactica@users.sourceforge.net>

    * scancd.c, scanct.c: the following events are now handled as
      errors instead of mere warnings:
      - Unexpected blanks (possibly caused by broken syntax)
      - Extra characters at the end of the line
      - Duplicated or conflicting ##version, ##language, ##name and ##rcsid
        commands
      - Missing brackets
      - Duplicated ID numbers and identifiers
    * createcatsrc.c: likewise with binary characters in string type None
    * utils.c: ditto with unexpected stuff instead of hex/octal characters
    * scanct.c: now also exits with an error if the codeset is declared
      twice, also fixed memory leak ('line' counter was never freed) and
      added support for the full 32bit codeset range as supported by
      AmigaOS 4
    * showfuncs.c: errors are now as verbose as warnings are
    * FlexCat.cd: added MSG_ERR_DOUBLECTCODESET & MSG_ERR_ERROR to suit
    * FlexCat_cat.h, FlexCat_cat_other.h, locale.c, locale_other.c:
      regenerated

2007-01-06  David Rey <tactica@users.sourceforge.net>

    * scanct.c: now exits with an error if the ##language command contains
      non-alphabetical characters, at least for AmigaOS (fixes bug #747909),
      and also checks properly for trailing ellipsis in both catalog
      description and translation files (fixes bug #747904).
      Thanks to Vicente "Ami603" Gimeno for his help!
    * FlexCat.cd: added two additional strings to suit
    * Makefile: fixed the paths added recently to keep make happy,
      replaced -g with -ggdb, now generates all the auto-generated
      files from FlexCat.cd no matter what the host platform is.